--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "redis": "^4.3.1"
   }
 }
